--- a/NDK/css/style.css
+++ b/NDK/css/style.css
@@ -44,7 +44,7 @@ header, nav, section, article, aside, footer, hgroup {
 }
 
 html, body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
