--- a/jailbreak/NDK/css/style.css
+++ b/jailbreak/NDK/css/style.css
@@ -44,7 +44,7 @@ header, nav, section, article, aside, footer, hgroup {
 }
 
 html, body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
@@ -256,8 +256,9 @@ global styles
 */
 html,
 body {
-  background: #fff;
-  font-family: 'Raleway', sans-serif;
+  background: #121212;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 ::selection {
@@ -460,7 +461,7 @@ header
 */
 
 .background-header {
-  background-color: #fff;
+  background-color: #121212;
   height: 80px!important;
   position: fixed!important;
   top: 0px;
@@ -471,15 +472,15 @@ header
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: white!important;
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #5fb759!important;
+  color: white!important;
 }
 
 .background-header .nav li a.active {
-  color: #5fb759!important;
+  color: white!important;
 }
 
 .header-area {
@@ -933,10 +934,11 @@ about
   padding: 20px 0px 0px 0px;
   position: relative;
   z-index: 9;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 #about .container {
-  border-bottom: 5px solid #f7f7f7;
+  border-bottom: 5px solid #121212;
   padding-bottom: 80px;
 }
 
@@ -946,6 +948,7 @@ about
 
 #about .section-heading h6 {
   color: #5fb759;
+
 }
 
 #about .service-item {
@@ -1307,6 +1310,7 @@ footer {
   padding: 80px 0px;
   background: rgb(51,155,158);
   background: linear-gradient(145deg, rgba(51,155,158,1) 0%, rgba(104,204,152,1) 100%);
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 footer .left-text-content p {
