--- a/NDK/css/btn_top.css
+++ b/NDK/css/btn_top.css
@@ -1,5 +1,5 @@
 .btn-top {
-    background-image: url(../img/btn_top.png);
+    background-image: url(.../img/btn_top.png);
     background-repeat: no-repeat;
     border: medium none;
     bottom: 20px;
