--- a/NDK/css/style.css
+++ b/NDK/css/style.css
@@ -51,6 +51,8 @@ html, body {
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-animation: gradient 15s ease infinite;
+	-animation: gradient 15s ease infinite;
 }
 
 img {
