--- a/NDK/css/style.css
+++ b/NDK/css/style.css
@@ -50,9 +50,22 @@ html, body {
   font-size: 16px;
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-animation: gradient 15s ease infinite;
-	-animation: gradient 15s ease infinite;
+  background: linear-gradient(-45deg, #ffffff, #111111);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 img {
